--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,12 @@
 
 	<groupId>eu.eu-emi.security</groupId>
 	<artifactId>canl-java-axis2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 
-	<name>canl-java-axis2</name>
+	<name>Common authentication library axis2 plugin</name>
 	<url>http://maven.apache.org</url>
+	<inceptionYear>2012</inceptionYear>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -69,7 +70,237 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.mycila.maven-license-plugin</groupId>
+				<artifactId>maven-license-plugin</artifactId>
+				<configuration>
+					<header>project/LICENSE.template</header>
+					<mapping>
+						<java>SLASHSTAR_STYLE</java>
+						<ini>SCRIPT_STYLE</ini>
+					</mapping>
+					<includes>
+						<include>src/**</include>
+					</includes>
+					<excludes>
+						<exclude>**/com/caucho/**</exclude>
+						<exclude>**/resources/**</exclude>
+						<exclude>**/credentials/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<tarLongFileMode>gnu</tarLongFileMode>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<links>
+						<link>http://java.sun.com/j2se/1.5.0/docs/api/
+						</link>
+					</links>
+					<quiet>true</quiet>
+					<aggregate>true</aggregate>
+					<author>false</author>
+					<version>true</version>
+					<doctitle>${project.name} ${project.version} Java API.</doctitle>
+					<windowtitle>${project.name} ${project.version} Java API.
+					</windowtitle>
+					<overview>src/main/java/overview.html</overview>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+					<outputDirectory>${project.reporting.outputDirectory}/xref
+					</outputDirectory>
+					<doctitle>${project.name} ${project.version} Code Cross-Reference
+					</doctitle>
+					<windowtitle>${project.name} ${project.version} Java API.
+					</windowtitle>
+					<javadocDir>${project.reporting.outputDirectory}/apidocs
+					</javadocDir>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+					<outputDirectory>${project.reporting.outputDirectory}/unitTest
+					</outputDirectory>
+					<xrefLocation>${project.reporting.outputDirectory}/xref
+					</xrefLocation>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+
+	<profiles>
+		<profile>
+			<id>EMI</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<finalName>canl-java-tomcat</finalName>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>2.3.2</version>
+						<configuration>
+							<source>1.6</source>
+							<target>1.6</target>
+						</configuration>
+
+						<executions>
+							<execution>
+								<id>default-testCompile</id>
+								<phase>test-compile</phase>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>default-compile</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>compile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<!-- overwrite default descriptor to use -->
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/fakeroot.xml</descriptor>
+								<!-- don't build source tarball with maven, use 'make dist' -->
+								<!-- <descriptor>src/main/assembly/src-tarball.xml</descriptor> -->
+							</descriptors>
+							<attach>false</attach>
+							<ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>create-emi-symlinks</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<workingDirectory>${project.build.directory}/${project.build.finalName}-fakeroot.dir/usr/share/java</workingDirectory>
+									<executable>/bin/ln</executable>
+									<arguments>
+										<argument>-sfv</argument>
+										<argument>${project.build.finalName}-${project.version}.jar</argument>
+										<argument>${project.build.finalName}.jar</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>create-emi-tarball</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<workingDirectory>${project.build.directory}/${project.build.finalName}-fakeroot.dir</workingDirectory>
+									<executable>/bin/sh</executable>
+									<arguments>
+										<argument>${basedir}/src/main/build/emi-binary-tarball.sh</argument>
+										<argument>${project.build.finalName}-${project.version}</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>delete-emi-symlinks</id>
+								<phase>pre-clean</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<workingDirectory>${project.build.directory}/${project.build.finalName}-fakeroot.dir</workingDirectory>
+									<executable>/bin/rm</executable>
+									<arguments>
+										<argument>-f</argument>
+										<argument>usr/share/java/${project.build.finalName}.jar</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<description>EMI Common Authentication Library axis2 Plugin</description>
+
+	<developers>
+		<developer>
+			<id>jhahkala</id>
+			<name>Joni Hahkala</name>
+			<organization>Helsinki Institute of Physics</organization>
+			<organizationUrl>http://www.hip.fi/</organizationUrl>
+			<roles>
+				<role>developer</role>
+				<role>documentation</role>
+			</roles>
+			<timezone>+1</timezone>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt
+        </url>
+		</license>
+	</licenses>
+	<organization>
+		<name>European Middleware Initiative</name>
+		<url>http://www.eu-emi.eu</url>
+	</organization>
+	<scm>
+		<url>https://github.com/jhahkala/canl-java-axis2.git</url>
+		<connection>scm:git:https://github.com/jhahkala/canl-java-axis2.git</connection>
+	</scm>
 
 </project>
