fix the unit/functionality tests

--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>eu.eu-emi.security</groupId>
-			<artifactId>canl</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2</artifactId>
 			<version>1.6.2</version>
@@ -47,6 +42,21 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>1.46</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.eu-emi.security</groupId>
+			<artifactId>canl</artifactId>
+			<version>1.1.0-rc2</version>
 		</dependency>
 	</dependencies>
 	<build>
