--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>eu.eu-emi.security</groupId>
 			<artifactId>canl</artifactId>
-			<version>1.1.0-rc2</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 	<build>
